[gd_scene load_steps=4 format=3 uid="uid://hhg0qf360cf"]

[ext_resource type="Script" path="res://scripts/control_manager.gd" id="1_oqdsh"]
[ext_resource type="Texture2D" uid="uid://7k5y6g33g3ap" path="res://addons/kenney_prototype_textures/dark/texture_04.png" id="2_kb85u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4wibe"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oqdsh")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 20.0
offset_right = 151.0
offset_bottom = 78.0
text = "0 coins"

[node name="ShelfPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4wibe")

[node name="ShelfImage" type="TextureRect" parent="ShelfPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -75.0
offset_right = 128.0
offset_bottom = 126.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_kb85u")
expand_mode = 1
stretch_mode = 5

[node name="GridContainer" type="GridContainer" parent="ShelfPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 122.0
grow_horizontal = 2

[node name="ShelfName" type="Label" parent="ShelfPanel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Shelf Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShelfAmount" type="Label" parent="ShelfPanel/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Shelf Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShelfCost" type="Label" parent="ShelfPanel/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Shelf Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeButton" type="Button" parent="ShelfPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -62.0
offset_right = 215.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
text = "Upgrade"

[node name="UpgradeCost" type="Label" parent="ShelfPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -51.0
offset_right = 297.0
offset_bottom = -20.0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Shelf Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="ShelfPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -21.0
offset_top = -20.0
offset_right = 21.0
offset_bottom = 23.0
grow_horizontal = 0
text = "X"

[connection signal="pressed" from="ShelfPanel/UpgradeButton" to="." method="_on_upgrade_button_pressed"]
[connection signal="pressed" from="ShelfPanel/CloseButton" to="." method="_on_close_button_pressed"]
